# passka

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.agents/skills/passka-creds/: SKILL.md
.agents/skills/passka-operator/: SKILL.md
.agents/skills/passka-operator/agents/: openai.yaml
.agents/skills/passka-operator/references/: commands.md
.github/workflows/: ci.yml  release.yml
app/: Package.swift
app/Sources/PasskaApp/: AuthManager.swift  CredentialStore.swift  PasskaApp.swift
app/Sources/PasskaApp/Views/: AccessManagementView.swift  AddCredentialSheet.swift  AgentManagementView.swift  ContentView.swift  CredentialDetailView.swift  CredentialListView.swift  EmptyStateView.swift  SidebarView.swift
app/Sources/PasskaBridge/: PasskaBridge.swift
app/Sources/PasskaHeaders/: module.modulemap  passka_ffi.h
crates/passka-cli/: Cargo.toml
crates/passka-cli/src/: broker_url.rs  cli.rs  main.rs
crates/passka-cli/src/commands/: access.rs  account.rs  add.rs  audit.rs  auth.rs  broker.rs  exec.rs  get.rs  list.rs  manage.rs  mod.rs  policy.rs  principal.rs  refresh.rs  snippet.rs
crates/passka-core/: Cargo.toml
crates/passka-core/src/: broker.rs  lib.rs  oauth.rs  types.rs
crates/passka-core/src/store/: index.rs  keychain.rs  mod.rs
crates/passka-ffi/: Cargo.toml  build.rs
crates/passka-ffi/src/: lib.rs
docs/plans/: 2026-03-04-v2-refactor-design.md
scripts/release/: package-macos-release.sh
