[workspace]
resolver = "2"
members = [
    "crates/passka-core",
    "crates/passka-cli",
    "crates/passka-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
passka-core = { path = "crates/passka-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
