[package]
name = "passka-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "passka"
path = "src/main.rs"

[dependencies]
passka-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
