[package]
name = "passka-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"

[dev-dependencies]
axum = "0.8"
tempfile = "3"
